--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="/static/img/dp.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey Clever Programmer{{name}}!</h1>
                         <hr class="star-light">
@@ -116,13 +116,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.facebook.com/Stromking101" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
+                        <img src="https://techcrunch.com/wp-content/uploads/2017/05/shutterstock_186292982a.jpg?w=730&crop=1" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
